--- a/view/frontend/templates/component/daily_deal_teaser/product_details.phtml
+++ b/view/frontend/templates/component/daily_deal_teaser/product_details.phtml
@@ -8,11 +8,11 @@ $product = $viewModel->getProduct();
 
 <div class="cs-daily-deal-teaser__details-main">
     <?php if (isset($product['brandName']) && $block->getVar('daily_deal_teaser/show_brand')): ?>
-        <p class="cs-daily-deal-teaser__product-brand"><?=$product['brandName']?></p>
+        <p class="cs-daily-deal-teaser__product-brand"><?= /* @noEscape */ $product['brandName'] ?></p>
     <?php endif; ?>
-
+ 
     <p class="cs-daily-deal-teaser__product-name">
-        <a href="<?=$product['url']?>" class="cs-daily-deal-teaser__product-link"><?=$product['name']?></a>
+        <a href="<?= /* @noEscape */ $product['url'] ?>" class="cs-daily-deal-teaser__product-link"><?= /* @noEscape */ $product['name'] ?></a>
     </p>
 
     <?php if (isset($product['rating']['data']['activeStars']) && $block->getVar('daily_deal_teaser/show_rating')): ?>
@@ -28,10 +28,10 @@ $product = $viewModel->getProduct();
         </div>
     <?php endif; ?>
 
-    <?php if (isset($product['swatches'])): ?>
-        <div class="cs-daily-deal-teaser__product-swatches"><?=$product['swatches']?></div>
+    <?php if (isset($product['swatches']) &&  $block->getVar('daily_deal_teaser/swatches/show')): ?>
+        <div class="cs-daily-deal-teaser__product-swatches"><?= /* @noEscape */ $product['swatches'] ?></div>
     <?php endif; ?>
     </div>
     <div class="cs-daily-deal-teaser__details-price">
-        <div class="cs-daily-deal-teaser__price"><?=$product['price']?></div>
+        <div class="cs-daily-deal-teaser__price"><?= /* @noEscape */ $product['price'] ?></div>
     </div>
